# Physical-AI-Humanoid-Robotics

./: .gitignore  CLAUDE.md  README.md
.ccr/: config.json
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  =1.0.0  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt  textbook.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: index_content.py  seed_chapters.py  setup_qdrant.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  flashcard_agent.py  highlight_agent.py  personalization_agent.py  qa_agent.py  quiz_agent.py  translation_agent.py
backend/src/api/: auth.py  chat.py  content.py  flashcard.py  personalization.py  quiz.py  users.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
backend/src/models/: __init__.py  base.py  code_execution.py  content.py  conversation.py  flashcard.py  personalized_content.py  quiz.py  reading_progress.py  session.py  user.py
backend/src/services/: embedding_service.py  flashcard_service.py  gemini_client.py  personalization_service.py  qdrant_client.py  quiz_service.py  rag_service.py  translation_service.py
docusaurus/: .env.example  .eslintrc.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json  vercel.json
docusaurus/docs/: index.mdx
docusaurus/src/components/: ErrorBoundary.tsx
specs/001-ai-textbook-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+132 files in other folders)
